More styling fix up (dark mode)

--- a/src/Play/Header/Help/Help.module.css
+++ b/src/Play/Header/Help/Help.module.css
@@ -6,4 +6,5 @@
   align-items: center;
   width: 50px;
   height: 100%;
+  cursor: pointer;
 }
